fixed caption on mobile

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -53,6 +53,9 @@ a:hover {
   display: flex;
   align-items: center;
   gap: 10px;
+  @media (max-width: 320px){
+    flex-direction: column;
+  }
 }
 
 .book-now button {
