--- a/src/Components/SingleSpeaker/SingleSpeaker.css
+++ b/src/Components/SingleSpeaker/SingleSpeaker.css
@@ -43,8 +43,11 @@
     font-size: 18px;
     line-height: 1.2;
     width: 80%;
+    @media (max-width: 475px){
+      top: 60%;
+    }
   }
-
+/* 
   .secCaption {
     position: absolute;
     top: 85%;
@@ -58,8 +61,9 @@
     transition: opacity 0.3s;
     text-align: center;
     line-height: 1.2;
-    width: 70%;
-  }
+    width: 80%;
+  
+  } */
  
   
   
@@ -79,6 +83,10 @@
     font-size: 14px;
     transition: opacity 0.3s;
     text-align: center;
+    @media (max-width: 475px){
+      top: 75%;
+      width: 70%;
+    }
   }
   
   .hovered .secCaption.overlay-visible {
@@ -141,10 +149,7 @@
        }
   }
   .secCaption{
-    @media (max-width: 768px){
-        width: 70%;
-        top: 85%;
-       }
+   
   }
 
  
